2009-10-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/web.pm: Changed priority of unknown User-Agent log message
	Was WARN is now INFO which is less scary and makes a lot more sense. 

	* pf/conf/documentation.conf, pf/conf/pf.conf.defaults: Documentation
	for the whitelist parameter is now more accurate.
	
	* pf/cgi-bin/pdp.cgi, pf/lib/pf/violation.pm, pf/sbin/pfdetect,
	pf/sbin/pfdhcplistener: The validation that the violation is applicable
	is now done in violation_trigger removing duplicate code. Fixes #801;
	http://www.packetfence.org/mantis/view.php?id=801

2009-10-08	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/rawip.pm, pf/lib/pf/util.pm, pf/sbin/pfmon: Testing for 
	whitelisted_mac is no longer called inside trappable_mac sub.
	Modified callers so they do the test themselves.
	Whitelisting validation was called two times because of that.

	* pf/lib/pf/util.pm: Removed commented code

2009-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Enterasys/D2.pm, pf/README_SWITCHES: Added support for
	Enterasys Standalone D2 Switch
	It works in linkUp/linkDown mode and port-security (called maclock on
	Enterasys hardware). Talks to the switch using SNMP.

	* pf/README_SWITCHES, pf/docs/PacketFence_Administration_Guide.odt: 
	Added instructions to setup the D2
	Updated supported switches list

2009-10-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* UPGRADING: Added notes about the last two uplink fixes since someone
	could rely on the bug's behaviour without his knowledge.

	* pf/lib/pf/SNMP/Accton.pm, pf/lib/pf/SNMP/Cisco.pm, 
	pf/lib/pf/SNMP/Linksys.pm, pf/lib/pf/SNMP/Nortel.pm, pf/lib/pf/SNMP.pm:
	switches.conf's uplink=dynamic is now case-insensitive. Fixes #809;
	http://www.packetfence.org/mantis/view.php?id=809

	* pf/lib/pf/SNMP/Accton.pm, pf/lib/pf/SNMP/Cisco.pm, 
	pf/lib/pf/SNMP/Linksys.pm, pf/lib/pf/SNMP/Nortel.pm, pf/lib/pf/SNMP.pm:
	Various getUpLinks() subs didn't respect the "return -1 on failure" 
	contract. Fixes #795;