@@ -156,11 +156,7 @@ url=/content/index.php?template=spam
 disable=N
 
 # 1400000 - 1499999 Reserved for local violations
-[1400000]
-desc=Hub
-actions=trap,email,log
-url=/content/index.php?template=hub
-disable=N
+
 
 [2000032]
 desc=LSASS Exploit
