@@ -1,8 +1,0 @@
-<?
-
-  $description_header = 'Hub Detection';
-
-  $description_text = 'You have been detected using a hub. Such device is not permitted on the network.  Please remove it.';
-
-?>
-
